fix: adjust dark mode toggle functionality

--- a/src/index.css
+++ b/src/index.css
@@ -499,6 +499,7 @@ CountryDetails
 }
 .details-center img {
   width: 100%;
+  height: 225px;
   object-fit: cover;
 }
 .details-center .content {
@@ -524,11 +525,12 @@ CountryDetails
   background: transparent;
   border: 1px solid var(--light-gray);
   border-radius: var(--borderRadius-sm);
+  border: none;
   color: var(--dark-gray);
   font-size: 0.75rem;
-  padding: 0.4375rem 0.75rem;
+  padding: 0.5375rem 0.75rem;
   text-transform: capitalize;
-  box-shadow: var(--shadow-2);
+  box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
 .details-btn:hover {
